[tool.poetry]
name = "pyfinra"
version = "0.1.0"
description = "unofficial Finra api"
authors = ["T-136"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
